FIX : postcell social interaction aligned

--- a/src/components/postCell/postCell.module.scss
+++ b/src/components/postCell/postCell.module.scss
@@ -67,6 +67,7 @@
 .socialInteractionContainer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .interactionButton {
